<resources>
    <string name="app_name">LBAS</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="company_name">Company Name</string>
    <string name="register">Register</string>
    <string name="action_sign_up">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="clear">Clear Markers</string>
    <string name="my_events">My Events</string>
    <string name="new_dates">New Dates</string>
    <string name="invitations">Invitations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_name">Event Name</string>
    <string name="the_event_will_be_on">The event will be on:</string>
    <string name="sun">Sun</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="thurs">Thurs</string>
    <string name="wed">Wed</string>
    <string name="tues">Tues</string>
    <string name="mon">Mon</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="start_Time">Start Time</string>
    <string name="select_location">Select Location</string>
    <string name="save">Save</string>
    <string name="eventDays">Days</string>
</resources>
